# Crew-AI

./: main.py  pyproject.toml
Crew_AI/stock_analyser/: README.md  pyproject.toml  requirements.txt
Crew_AI/stock_analyser/output/: report_Tata Consultancy Services.md  report_Tata Consultancy Services.txt
Crew_AI/stock_analyser/src/stock_analyser/: crew.py  main.py
Crew_AI/stock_analyser/src/stock_analyser/config/: agents.yaml  tasks.yaml
Crew_AI/stock_pricker/: README.md  pyproject.toml
Crew_AI/stock_pricker/outputs/: financial_analysis.md  stock_selection.md  trending_stocks.md
Crew_AI/stock_pricker/src/stock_pricker/: crew.py  main.py
Crew_AI/stock_pricker/src/stock_pricker/config/: agents.yaml  tasks.yaml
