[project]
name = "agentic-ai-workflows"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "crewai[google-genai]>=1.6.1",
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.2.2",
    "langchain-groq>=1.1.2",
    "langchain-openai>=1.1.13",
    "langgraph>=1.1.6",
    "markdown>=3.10.2",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "typing>=3.10.0.0",
]
