[project]
name = "stock_analyser"
version = "0.1.0"
description = "stock_analyser using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[google-genai,litellm,tools]==1.10.1",
    "dotenv>=0.9.9",
    "langchain>=1.2.15",
    "langgraph>=1.1.6",
    "litellm>=1.82.2",
    "load-dotenv>=0.1.0",
    "python-dotenv",
]

[project.scripts]
stock_analyser = "stock_analyser.main:run"
run_crew = "stock_analyser.main:run"
train = "stock_analyser.main:train"
replay = "stock_analyser.main:replay"
test = "stock_analyser.main:test"
run_with_trigger = "stock_analyser.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
