[project]
name = "stock_pricker"
version = "0.1.0"
description = "stock_pricker using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools,google-genai,litellm]==1.10.1"
]

[project.scripts]
stock_pricker = "stock_pricker.main:run"
run_crew = "stock_pricker.main:run"
train = "stock_pricker.main:train"
replay = "stock_pricker.main:replay"
test = "stock_pricker.main:test"
run_with_trigger = "stock_pricker.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
